restored build.gradle and updated OnThisDay.java to use Jackson instead json